--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+.App>img{
+  width: 256px;
+  height: auto;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
